# trading-platform

./: .gitignore  README.md
backend/: CMakeLists.txt  main.cpp  server.cpp
backend/trading_engine/market_data/: dataParser.cpp  data_fetcher.py
backend/trading_engine/market_data/fetch/: data_fetcher.py
backend/trading_engine/market_data/parse/: data_parser.cpp  data_parser.h
frontend/: package.json
frontend/src/: App.css  App.tsx
